[package]
name = "rec_descent"
version = "0.1.0" # initial version ofr statically known production
edition = "2021"

[lib]
path = "src/lexer.rs"
name = "lexer"

[profile.dev]
debug = true
opt-level = 0
panic = "unwind"
lto = false

[profile.production]
inherits = "release"
debug = false
opt-level = "s"
panic = "unwind"
lto = false # don't want to optimize in link time for less binary size